# read-write-pipe

./: Cargo.toml  README.md
examples/: copy_file.rs  simple_cat.rs
src/: lib.rs
